@@ -1,3 +1,5 @@
+* Use singleton for TableHandler
+
 Version 6.4.0 - 2022-05-02
 * Bug fixes (see mercurial logs for details)
 * Use unittest discover
